added more content to testimonials and projects

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -118,12 +118,13 @@ header.fixed .scroll{
   }
   
   div[data-index="0"][aria-hidden="true"] + div[data-index="1"][aria-hidden="true"],div[data-index="1"][aria-hidden="true"] + div[data-index="2"][aria-hidden="true"],
-  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"], div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"]{
+  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"], div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"],
+  div[data-index="4"][aria-hidden="true"] + div[data-index="5"][aria-hidden="true"]{
     transform: translateX(12.5%) scale(0.9) !important;
   }
   
   div[data-index="3"][aria-hidden="true"], div[data-index="4"][aria-hidden="true"],
-  div[data-index="5"][aria-hidden="true"]{
+  div[data-index="5"][aria-hidden="true"], div[data-index="6"][aria-hidden="true"]{
     transform: translateX(-12.5%) scale(0.9) !important;
   }   
 }
@@ -143,12 +144,13 @@ header.fixed .scroll{
   }
   
   div[data-index="0"][aria-hidden="true"] + div[data-index="1"][aria-hidden="true"],div[data-index="1"][aria-hidden="true"] + div[data-index="2"][aria-hidden="true"],
-  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"], div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"]{
+  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"], div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"],
+  div[data-index="4"][aria-hidden="true"] + div[data-index="5"][aria-hidden="true"]{
     transform: translateX(15%) scale(0.9) !important;
   }
   
   div[data-index="3"][aria-hidden="true"], div[data-index="4"][aria-hidden="true"],
-  div[data-index="5"][aria-hidden="true"]{
+  div[data-index="5"][aria-hidden="true"], div[data-index="6"][aria-hidden="true"]{
     transform: translateX(-15%) scale(0.9) !important;
   }
 }
@@ -168,12 +170,13 @@ header.fixed .scroll{
   }
   
   div[data-index="0"][aria-hidden="true"] + div[data-index="1"][aria-hidden="true"], div[data-index="1"][aria-hidden="true"] + div[data-index="2"][aria-hidden="true"],
-  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"], div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"]{
+  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"], div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"],
+  div[data-index="4"][aria-hidden="true"] + div[data-index="5"][aria-hidden="true"]{
     transform: translateX(215px) scale(0.9) !important;
   }
   
   div[data-index="3"][aria-hidden="true"],div[data-index="4"][aria-hidden="true"],
-  div[data-index="5"][aria-hidden="true"]{
+  div[data-index="5"][aria-hidden="true"],div[data-index="6"][aria-hidden="true"]{
     transform: translateX(-215px) scale(0.9) !important;
   }  
 }
@@ -193,11 +196,12 @@ header.fixed .scroll{
   }
   
   div[data-index="0"][aria-hidden="true"] + div[data-index="1"][aria-hidden="true"], div[data-index="1"][aria-hidden="true"] + div[data-index="2"][aria-hidden="true"],
-  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"],div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"]{
+  div[data-index="2"][aria-hidden="true"] + div[data-index="3"][aria-hidden="true"],div[data-index="3"][aria-hidden="true"] + div[data-index="4"][aria-hidden="true"],
+  div[data-index="4"][aria-hidden="true"] + div[data-index="5"][aria-hidden="true"]{
     transform: translateX(375px) scale(0.9) !important;
   } 
   div[data-index="3"][aria-hidden="true"], div[data-index="4"][aria-hidden="true"],
-  div[data-index="5"][aria-hidden="true"]{
+  div[data-index="5"][aria-hidden="true"],div[data-index="6"][aria-hidden="true"]{
     transform: translateX(-375px) scale(0.9) !important;
   }
 }
